// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bokmål render 1`] = `
<div>
  <div
    id="qwerty"
    style="padding-top: 10px;"
  >
    <div>
      <p>
        Dette er en tekst
      </p>
      <div
        data-testid="factbox"
        style="margin-bottom: 10px;"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-5z3g5l-MuiPaper-root-MuiAccordion-root"
        >
          <div
            aria-controls="qwerty-fact-dette-er-en-overskrift-content"
            aria-expanded="false"
            class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters css-ubsxtp-MuiButtonBase-root-MuiAccordionSummary-root"
            id="qwerty-fact-dette-er-en-overskrift-header"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-o4b71y-MuiAccordionSummary-content"
            >
              Dette er en overskrift
            </div>
            <div
              class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
            >
              <svg
                color="#033F85"
                fill="currentColor"
                font-size="large"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="color: rgb(3, 63, 133);"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"
                />
              </svg>
            </div>
          </div>
          <div
            class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
              >
                <div
                  aria-labelledby="qwerty-fact-dette-er-en-overskrift-header"
                  class="MuiAccordion-region"
                  id="qwerty-fact-dette-er-en-overskrift-content"
                  role="region"
                >
                  <div
                    class="MuiAccordionDetails-root css-15v22id-MuiAccordionDetails-root"
                  >
                    <p>
                      Dette er en test
                    </p>
                    

                    <h1
                      id="hovedoverskrift"
                    >
                      Hovedoverskrift
                    </h1>
                    

                    <p>
                      Litt mer tekst
                    </p>
                    

                    <h2
                      id="underoverskrift"
                    >
                      Underoverskrift
                    </h2>
                    

                    <h3
                      id="dette-er-en-overskrift"
                    >
                      Dette er en overskrift!
                    </h3>
                    

                    <pre>
                      <code
                        class="language-sas"
                      >
                        data test;
set test2;
var = 0;
run;

                      </code>
                    </pre>
                    

                    <p>
                      Og litt tekst her
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <p>
        Dette er en test
      </p>
      

      <h1
        id="hovedoverskrift"
      >
        Hovedoverskrift
      </h1>
      

      <figure
        style="width: 90%; display: flex; justify-content: center; align-items: center; flex-direction: column;"
      >
        <img
          alt="Menisk, utvikling i antall inngrep i perioden 2013–2017"
          src="https://picsum.photos/id/237/100/100.jpg"
          style="display: block; margin: auto;"
          title="Menisk, utvikling i antall inngrep i perioden 2013–2017"
        />
        <figcaption>
          <strong>
            Figur:
          </strong>
           
          Menisk, utvikling i antall inngrep pr. 100 000 innbyggere i perioden 2013–2017, justert for kjønn og alder. Fordelt på opptaksområder og offentlig eller privat behandler.
        </figcaption>
      </figure>
      <div
        data-testid="factbox"
        style="margin-bottom: 10px;"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-5z3g5l-MuiPaper-root-MuiAccordion-root"
        >
          <div
            aria-controls="qwerty-fact-dette-er-en-overskrift-content"
            aria-expanded="false"
            class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters css-ubsxtp-MuiButtonBase-root-MuiAccordionSummary-root"
            id="qwerty-fact-dette-er-en-overskrift-header"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-o4b71y-MuiAccordionSummary-content"
            >
              Dette er en overskrift
            </div>
            <div
              class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
            >
              <svg
                color="#033F85"
                fill="currentColor"
                font-size="large"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="color: rgb(3, 63, 133);"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"
                />
              </svg>
            </div>
          </div>
          <div
            class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
              >
                <div
                  aria-labelledby="qwerty-fact-dette-er-en-overskrift-header"
                  class="MuiAccordion-region"
                  id="qwerty-fact-dette-er-en-overskrift-content"
                  role="region"
                >
                  <div
                    class="MuiAccordionDetails-root css-15v22id-MuiAccordionDetails-root"
                  >
                    <p>
                      Dette er en test
                    </p>
                    

                    <h1
                      id="hovedoverskrift"
                    >
                      Hovedoverskrift
                    </h1>
                    

                    <figure
                      style="width: 90%; display: flex; justify-content: center; align-items: center; flex-direction: column;"
                    >
                      <img
                        alt="Menisk, utvikling i antall inngrep i perioden 2013–2017"
                        src="https://picsum.photos/id/237/100/100.jpg"
                        style="display: block; margin: auto;"
                        title="Menisk, utvikling i antall inngrep i perioden 2013–2017"
                      />
                      <figcaption>
                        <strong>
                          Figur:
                        </strong>
                         
                        Menisk, utvikling i antall inngrep pr. 100 000 innbyggere i perioden 2013–2017, justert for kjønn og alder. Fordelt på opptaksområder og offentlig eller privat behandler.
                      </figcaption>
                    </figure>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`English render 1`] = `
<div>
  <div
    id="qwerty"
    style="padding-top: 10px;"
  >
    <div>
      <p>
        Dette er en test
      </p>
      

      <h1
        id="hovedoverskrift"
      >
        Hovedoverskrift
      </h1>
      

      <figure
        style="width: 90%; display: flex; justify-content: center; align-items: center; flex-direction: column;"
      >
        <img
          alt="Menisk, utvikling i antall inngrep i perioden 2013–2017"
          src="https://picsum.photos/id/237/100/100.jpg"
          style="display: block; margin: auto;"
          title="Menisk, utvikling i antall inngrep i perioden 2013–2017"
        />
        <figcaption>
          <strong>
            Figure:
          </strong>
           
          Menisk, utvikling i antall inngrep pr. 100 000 innbyggere i perioden 2013–2017, justert for kjønn og alder. Fordelt på opptaksområder og offentlig eller privat behandler.
        </figcaption>
      </figure>
      <div
        data-testid="factbox"
        style="margin-bottom: 10px;"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-5z3g5l-MuiPaper-root-MuiAccordion-root"
        >
          <div
            aria-controls="qwerty-fact-dette-er-en-overskrift-content"
            aria-expanded="false"
            class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters css-ubsxtp-MuiButtonBase-root-MuiAccordionSummary-root"
            id="qwerty-fact-dette-er-en-overskrift-header"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-o4b71y-MuiAccordionSummary-content"
            >
              Dette er en overskrift
            </div>
            <div
              class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
            >
              <svg
                color="#033F85"
                fill="currentColor"
                font-size="large"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="color: rgb(3, 63, 133);"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"
                />
              </svg>
            </div>
          </div>
          <div
            class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
              >
                <div
                  aria-labelledby="qwerty-fact-dette-er-en-overskrift-header"
                  class="MuiAccordion-region"
                  id="qwerty-fact-dette-er-en-overskrift-content"
                  role="region"
                >
                  <div
                    class="MuiAccordionDetails-root css-15v22id-MuiAccordionDetails-root"
                  >
                    <p>
                      Dette er en test
                    </p>
                    

                    <h1
                      id="hovedoverskrift"
                    >
                      Hovedoverskrift
                    </h1>
                    

                    <p>
                      Litt mer tekst
                    </p>
                    

                    <h2
                      id="underoverskrift"
                    >
                      Underoverskrift
                    </h2>
                    

                    <h3
                      id="dette-er-en-overskrift"
                    >
                      Dette er en overskrift!
                    </h3>
                    

                    <pre>
                      <code
                        class="language-sas"
                      >
                        data test;
set test2;
var = 0;
run;

                      </code>
                    </pre>
                    

                    <p>
                      Og litt tekst her
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Mix render 1`] = `
<div>
  <div
    id="dette-er-en-miks-av-mye"
    style="padding-top: 10px;"
  >
    <h2>
      Dette er en miks av mye
    </h2>
    <div>
      <p>
        Dette er en test
      </p>
      

      <h1
        id="hovedoverskrift"
      >
        Hovedoverskrift
      </h1>
      

      <figure
        style="width: 90%; display: flex; justify-content: center; align-items: center; flex-direction: column;"
      >
        <img
          alt="Menisk, utvikling i antall inngrep i perioden 2013–2017"
          src="https://picsum.photos/id/237/100/100.jpg"
          style="display: block; margin: auto;"
          title="Menisk, utvikling i antall inngrep i perioden 2013–2017"
        />
        <figcaption>
          <strong>
            Figur:
          </strong>
           
          Menisk, utvikling i antall inngrep pr. 100 000 innbyggere i perioden 2013–2017, justert for kjønn og alder. Fordelt på opptaksområder og offentlig eller privat behandler.
        </figcaption>
      </figure>
      <div
        data-testid="factbox"
        style="margin-bottom: 10px;"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-5z3g5l-MuiPaper-root-MuiAccordion-root"
        >
          <div
            aria-controls="dette-er-en-miks-av-mye-fact-dette-er-en-overskrift-content"
            aria-expanded="false"
            class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters css-ubsxtp-MuiButtonBase-root-MuiAccordionSummary-root"
            id="dette-er-en-miks-av-mye-fact-dette-er-en-overskrift-header"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-o4b71y-MuiAccordionSummary-content"
            >
              Dette er en overskrift
            </div>
            <div
              class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
            >
              <svg
                color="#033F85"
                fill="currentColor"
                font-size="large"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="color: rgb(3, 63, 133);"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"
                />
              </svg>
            </div>
          </div>
          <div
            class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
              >
                <div
                  aria-labelledby="dette-er-en-miks-av-mye-fact-dette-er-en-overskrift-header"
                  class="MuiAccordion-region"
                  id="dette-er-en-miks-av-mye-fact-dette-er-en-overskrift-content"
                  role="region"
                >
                  <div
                    class="MuiAccordionDetails-root css-15v22id-MuiAccordionDetails-root"
                  >
                    <p>
                      Dette er en test
                    </p>
                    

                    <h1
                      id="hovedoverskrift"
                    >
                      Hovedoverskrift
                    </h1>
                    

                    <p>
                      Litt mer tekst
                    </p>
                    

                    <h2
                      id="underoverskrift"
                    >
                      Underoverskrift
                    </h2>
                    

                    <h3
                      id="dette-er-en-overskrift"
                    >
                      Dette er en overskrift!
                    </h3>
                    

                    <pre>
                      <code
                        class="language-sas"
                      >
                        data test;
set test2;
var = 0;
run;

                      </code>
                    </pre>
                    

                    <p>
                      Og litt tekst her
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <p>
        Dette er en tekst
      </p>
      <div
        data-testid="factbox"
        style="margin-bottom: 10px;"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-5z3g5l-MuiPaper-root-MuiAccordion-root"
        >
          <div
            aria-controls="dette-er-en-miks-av-mye-fact-dette-er-en-overskrift-content"
            aria-expanded="false"
            class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters css-ubsxtp-MuiButtonBase-root-MuiAccordionSummary-root"
            id="dette-er-en-miks-av-mye-fact-dette-er-en-overskrift-header"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-o4b71y-MuiAccordionSummary-content"
            >
              Dette er en overskrift
            </div>
            <div
              class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
            >
              <svg
                color="#033F85"
                fill="currentColor"
                font-size="large"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="color: rgb(3, 63, 133);"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"
                />
              </svg>
            </div>
          </div>
          <div
            class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
              >
                <div
                  aria-labelledby="dette-er-en-miks-av-mye-fact-dette-er-en-overskrift-header"
                  class="MuiAccordion-region"
                  id="dette-er-en-miks-av-mye-fact-dette-er-en-overskrift-content"
                  role="region"
                >
                  <div
                    class="MuiAccordionDetails-root css-15v22id-MuiAccordionDetails-root"
                  >
                    <p>
                      Dette er en test
                    </p>
                    

                    <h1
                      id="hovedoverskrift"
                    >
                      Hovedoverskrift
                    </h1>
                    

                    <p>
                      Litt mer tekst
                    </p>
                    

                    <h2
                      id="underoverskrift"
                    >
                      Underoverskrift
                    </h2>
                    

                    <h3
                      id="dette-er-en-overskrift"
                    >
                      Dette er en overskrift!
                    </h3>
                    

                    <pre>
                      <code
                        class="language-sas"
                      >
                        data test;
set test2;
var = 0;
run;

                      </code>
                    </pre>
                    

                    <p>
                      Og litt tekst her
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <p>
        Dette er en test
      </p>
      

      <h1
        id="hovedoverskrift"
      >
        Hovedoverskrift
      </h1>
      

      <figure
        style="width: 90%; display: flex; justify-content: center; align-items: center; flex-direction: column;"
      >
        <img
          alt="Menisk, utvikling i antall inngrep i perioden 2013–2017"
          src="https://picsum.photos/id/237/100/100.jpg"
          style="display: block; margin: auto;"
          title="Menisk, utvikling i antall inngrep i perioden 2013–2017"
        />
        <figcaption>
          <strong>
            Figur:
          </strong>
           
          Menisk, utvikling i antall inngrep pr. 100 000 innbyggere i perioden 2013–2017, justert for kjønn og alder. Fordelt på opptaksområder og offentlig eller privat behandler.
        </figcaption>
      </figure>
      <div
        data-testid="factbox"
        style="margin-bottom: 10px;"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-5z3g5l-MuiPaper-root-MuiAccordion-root"
        >
          <div
            aria-controls="dette-er-en-miks-av-mye-fact-dette-er-en-overskrift-content"
            aria-expanded="false"
            class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters css-ubsxtp-MuiButtonBase-root-MuiAccordionSummary-root"
            id="dette-er-en-miks-av-mye-fact-dette-er-en-overskrift-header"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-o4b71y-MuiAccordionSummary-content"
            >
              Dette er en overskrift
            </div>
            <div
              class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
            >
              <svg
                color="#033F85"
                fill="currentColor"
                font-size="large"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="color: rgb(3, 63, 133);"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"
                />
              </svg>
            </div>
          </div>
          <div
            class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
              >
                <div
                  aria-labelledby="dette-er-en-miks-av-mye-fact-dette-er-en-overskrift-header"
                  class="MuiAccordion-region"
                  id="dette-er-en-miks-av-mye-fact-dette-er-en-overskrift-content"
                  role="region"
                >
                  <div
                    class="MuiAccordionDetails-root css-15v22id-MuiAccordionDetails-root"
                  >
                    <p>
                      Dette er en test
                    </p>
                    

                    <h1
                      id="hovedoverskrift"
                    >
                      Hovedoverskrift
                    </h1>
                    

                    <figure
                      style="width: 90%; display: flex; justify-content: center; align-items: center; flex-direction: column;"
                    >
                      <img
                        alt="Menisk, utvikling i antall inngrep i perioden 2013–2017"
                        src="https://picsum.photos/id/237/100/100.jpg"
                        style="display: block; margin: auto;"
                        title="Menisk, utvikling i antall inngrep i perioden 2013–2017"
                      />
                      <figcaption>
                        <strong>
                          Figur:
                        </strong>
                         
                        Menisk, utvikling i antall inngrep pr. 100 000 innbyggere i perioden 2013–2017, justert for kjønn og alder. Fordelt på opptaksområder og offentlig eller privat behandler.
                      </figcaption>
                    </figure>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Nynorsk render 1`] = `
<div>
  <div
    id="qwerty"
    style="padding-top: 10px;"
  >
    <div>
      <p>
        Dette er en test
      </p>
      

      <h1
        id="hovedoverskrift"
      >
        Hovedoverskrift
      </h1>
      

      <figure
        style="width: 90%; display: flex; justify-content: center; align-items: center; flex-direction: column;"
      >
        <img
          alt="Menisk, utvikling i antall inngrep i perioden 2013–2017"
          src="https://picsum.photos/id/237/100/100.jpg"
          style="display: block; margin: auto;"
          title="Menisk, utvikling i antall inngrep i perioden 2013–2017"
        />
        <figcaption>
          <strong>
            Figur:
          </strong>
           
          Menisk, utvikling i antall inngrep pr. 100 000 innbyggere i perioden 2013–2017, justert for kjønn og alder. Fordelt på opptaksområder og offentlig eller privat behandler.
        </figcaption>
      </figure>
      <div
        data-testid="factbox"
        style="margin-bottom: 10px;"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-5z3g5l-MuiPaper-root-MuiAccordion-root"
        >
          <div
            aria-controls="qwerty-fact-dette-er-en-overskrift-content"
            aria-expanded="false"
            class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters css-ubsxtp-MuiButtonBase-root-MuiAccordionSummary-root"
            id="qwerty-fact-dette-er-en-overskrift-header"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-o4b71y-MuiAccordionSummary-content"
            >
              Dette er en overskrift
            </div>
            <div
              class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
            >
              <svg
                color="#033F85"
                fill="currentColor"
                font-size="large"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="color: rgb(3, 63, 133);"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"
                />
              </svg>
            </div>
          </div>
          <div
            class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
              >
                <div
                  aria-labelledby="qwerty-fact-dette-er-en-overskrift-header"
                  class="MuiAccordion-region"
                  id="qwerty-fact-dette-er-en-overskrift-content"
                  role="region"
                >
                  <div
                    class="MuiAccordionDetails-root css-15v22id-MuiAccordionDetails-root"
                  >
                    <p>
                      Dette er en test
                    </p>
                    

                    <h1
                      id="hovedoverskrift"
                    >
                      Hovedoverskrift
                    </h1>
                    

                    <p>
                      Litt mer tekst
                    </p>
                    

                    <h2
                      id="underoverskrift"
                    >
                      Underoverskrift
                    </h2>
                    

                    <h3
                      id="dette-er-en-overskrift"
                    >
                      Dette er en overskrift!
                    </h3>
                    

                    <pre>
                      <code
                        class="language-sas"
                      >
                        data test;
set test2;
var = 0;
run;

                      </code>
                    </pre>
                    

                    <p>
                      Og litt tekst her
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
